Updated contact and home pages, replaced images

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         </div>
    
     <header class="navbar">
-  <a href="#" class="logo"><img src="adorlogo.jpg" alt="ADOR Logo" width="190"></a>
+  <a href="#" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="240"></a>
   <nav>
     <ul class="nav-list">
         <li><a href="home.html">HOME</a></li>
