--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
         </div>
    
     <header class="navbar">
-  <a href="#" class="logo"><img src="adorlogo.jpg" alt="ADOR Logo" width="190"></a>
+  <a href="#" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="240"></a>
   <nav>
     <ul class="nav-list">
-       <li><a href="#" onclick="window.location.href='home.html'">HOME</a></li>
+      <li><a href="#" onclick="window.location.href='home.html'">HOME</a></li>
       <li><a href="#" onclick="window.location.href='blog.html'">BLOG</a></li>
       <li><a href="#" onclick="window.location.href='portfolio.html'">PORTFOLIO</a></li>
       <li><a href="#" onclick="window.location.href='contact.html'"> CONTACT </a></li>
