--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@
         </div>
    
     <header class="navbar">
-  <a href="#" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="240"></a>
+  <a href="home.html" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="240"></a>
   <nav>
     <ul class="nav-list">
-        <li><a href="home.html">HOME</a></li>
-      <li><a href="blog.html">BLOG</a></li>
+        <!-- <li><a href="home.html">HOME</a></li>
+      <li><a href="blog.html">BLOG</a></li> -->
+       <li><a href="pricing.html">PRICING</a></li>
       <li><a href="portfolio.html">PORTFOLIO</a></li>
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
