--- a/home.html
+++ b/home.html
@@ -6,13 +6,13 @@
         <div class="bgcolor">
             
         </div>
-   
     <header class="navbar">
-  <a href="#" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="240"></a>
+  <a href="home.html" class="logo"><img src="adorlogo.png" alt="ADOR Logo" width="300"></a>
   <nav>
     <ul class="nav-list">
-      <li><a href="#" onclick="window.location.href='home.html'">HOME</a></li>
-      <li><a href="#" onclick="window.location.href='blog.html'">BLOG</a></li>
+      <!-- <li><a href="#" onclick="window.location.href='home.html'">HOME</a></li>
+      <li><a href="#" onclick="window.location.href='blog.html'">BLOG</a></li> -->
+       <li><a href="#" onclick="window.location.href='portfolio.html'">PRICING</a></li>
       <li><a href="#" onclick="window.location.href='portfolio.html'">PORTFOLIO</a></li>
       <li><a href="#" onclick="window.location.href='contact.html'"> CONTACT </a></li>
     </ul>
