--- a/home.html
+++ b/home.html
@@ -55,9 +55,13 @@
     </div>
     <div class="footer-col">
       <h3>Contact Us</h3>
-      <p><img src="" alt=""> 28/1,  Bharathidasan St, Valasaravakkam,<br> Chennai, TamilNadu 60008</p>
-      <p><img src="whatsapp.svg" alt=""> +91‑7448866672</p>
-     <i class="fab fa-instagram">adorartistryofficial@gmail.com </i> </p>
+      <p> 28/1,  Bharathidasan St, Valasaravakkam,<br> Chennai, TamilNadu 60008</p>
+      <p> +91‑7448866672</p>
+      <p>adorartistryofficial@gmail.com </p>
+      <a href="https://facebook.com"><i class="fab fa-facebook-f"></i>
+
+
+       <a href="https://instagram.com"><i class="fab fa-instagram"></i>
  
     </div>
   </div>
