--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,44 @@
 
 
   </div>
+  <footer class="footer">
+  <div class="footer-main">
+    <div class="footer-col">
+      <h3>JASMINE</h3>
+      <p>Enhancing natural beauty with artful strokes—because your glow is the real masterpiece.</p>
+      <!-- <div class="social-icons">
+        <a href="#"><img src="fb.svg" alt="Facebook"></a>
+        <a href="#"><img src="insta.svg" alt="Instagram"></a>
+        <a href="#"><img src="twitter.svg" alt="Twitter"></a>
+        <a href="#"><img src="yt.svg" alt="YouTube"></a>
+      </div> -->
+    </div>
+    <div class="footer-col">
+      <h3>Explore</h3>
+      <ul>
+        <!-- <li><a href="#">SERVICES</a></li>
+        <li><a href="#">ACADEMY</a></li>
+        <li><a href="#">BOOKING</a></li>
+        <li><a href="#">TESTIMONIALS</a></li> -->
+       <li><a href="#" onclick="window.location.href='pricing.html'">PRICING</a></li>
+      <li><a href="#" onclick="window.location.href='portfolio.html'">PORTFOLIO</a></li>
+      <li><a href="#" onclick="window.location.href='contact.html'"> CONTACT </a></li>
+      </ul>
+    </div>
+    <div class="footer-col">
+      <h3>Contact Us</h3>
+      <p> 28/1,  Bharathidasan St, Valasaravakkam,<br> Chennai, TamilNadu 60008</p>
+      <p> +91‑7448866672</p>
+      <p>adorartistryofficial@gmail.com </p>
+      <a href="https://facebook.com"><i class="fab fa-facebook-f"></i>
+
+
+       <a href="https://instagram.com"><i class="fab fa-instagram"></i>
+ 
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>Ador Artistry © All Rights Reserved - 2025</p>
 <!DOCTYPE html>
 <html lang="en">
 <head>
