--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,14 @@
   <div class="map">
   
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.103447811302!2d80.20409007514667!3d13.029083887291582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5267217a21f021%3A0xa7791f7ce7d9c678!2s28%2C%20Bharathidasan%20St%2C%20Vasudevan%20Nagar%2C%20West%20Jafferkhanpet%2C%20Chennai%2C%20Tamil%20Nadu%20600083!5e0!3m2!1sen!2sin!4v1751216392880!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.103447811302!2d80.20409007514667!3d13.029083887291582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5267217a21f021%3A0xa7791f7ce7d9c678!2s28%2C%20Bharathidasan%20St%2C%20Vasudevan%20Nagar%2C%20West%20Jafferkhanpet%2C%20Chennai%2C%20Tamil%20Nadu%20600083!5e0!3m2!1sen!2sin!4v1751216392880!5m2!1sen!2sin" class="location" width="500" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
    
   </iframe>
 </div>
 
 
   </div>
+  
   <footer class="footer">
   <div class="footer-main">
     <div class="footer-col">
@@ -105,6 +106,7 @@
  
     </div>
   </div>
+  
   <div class="footer-bottom">
     <p>Ador Artistry © All Rights Reserved - 2025</p>
 <!DOCTYPE html>
